--- a/index.html
+++ b/index.html
@@ -123,191 +123,8 @@
 		</div>
 	</section>
 	<!-- End banner Area -->
-
-	<!-- Start Skills Area -->
-	<section id="skills-section" class="service-area section-gap">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="section-title">
-						<h2>Skills<span class="lnr lnr-code" style="padding-left: 20px;"></span></h2>
-						<p>Hover over each tile to see my corresponding stack!</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
-					<div class="relative">
-						<div class="thumb single-service" style="background-color: #e2a599;">
-							<div class="overlay overlay-bg"></div>
-							<!-- <img class="image img-fluid" src="img/work/w1.jpg" alt=""> -->
-							<span class="lnr lnr-screen"></span>
-							<h4>
-								<span>Web</span> Development
-							</h4><br>
-							<p>My first internship introduced me to the possibilities of web development, which I
-								continued
-								improving on through projects and at hackathons!</p>
-						</div>
-						<div class="middle">
-							<h5>JavaScript</h5>
-							<h5>TypeScript</h5>
-							<h5>HTML</h5>
-							<h5>CSS</h5>
-							<h5>Node.js</h5>
-							<h5>Express</h5>
-							<h5>MongoDB</h5>
-							<h5>jQuery</h5>
-							<!-- <div class="cat">Client Project</div> -->
-						</div>
-						<!-- <a class="overlay" href="portfolio-details.html"></a> -->
-					</div>
-				</div>
-				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
-					data-wow-delay="0.2s">
-					<div class="relative">
-						<div class="thumb single-service" style="background-color: #715f69;">
-							<div class="overlay overlay-bg"></div>
-							<!-- <img class="image img-fluid" src="img/work/w1.jpg" alt=""> -->
-							<span class="lnr lnr-laptop-phone"></span>
-							<h4>
-								<span>Tools/Application </span>Development
-							</h4><br>
-							<p>From company-wide internal tools, to applications - I have experience in creating
-								scalable
-								tools and applications used to automate processes.</p>
-						</div>
-						<div class="middle">
-							<h5>C/C++</h5>
-							<h5>Java</h5>
-							<h5>JavaScript</h5>
-							<h5>TypeScript</h5>
-							<h5>Bash</h5>
-							<h5>Git</h5>
-							<!-- <div class="cat">Client Project</div> -->
-						</div>
-						<!-- <a class="overlay" href="portfolio-details.html"></a> -->
-					</div>
-				</div>
-				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
-					data-wow-delay="0.2s">
-					<div class="relative">
-						<div class="thumb single-service" style="background-color: #90acd1;">
-							<div class="overlay overlay-bg"></div>
-							<!-- <img class="image img-fluid" src="img/work/w1.jpg" alt=""> -->
-							<span class="lnr lnr-dice"></span>
-							<h4>
-								<span>Game </span>Development
-							</h4><br>
-							<p>My first coding project was to make Doodle Jump! Since then, I have fell
-								in love with the creativity in game development. Check out
-								the games I have made in the past here!</p>
-						</div>
-						<div class="middle">
-							<h5>Java</h5>
-							<h5>Java Swing API</h5>
-							<h5>C++</h5>
-							<h5>SQL</h5>
-							<h5>Unity [learning]</h5>
-							<!-- <div class="cat">Client Project</div> -->
-						</div>
-						<!-- <a class="overlay" href="portfolio-details.html"></a> -->
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Skills Area -->
-
-	<!-- Start Education Area -->
-	<section id="education-section" class="service-area section-gap" style="background: white;">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="section-title">
-						<h2>Education<span class="lnr lnr-graduation-hat" style="padding-left: 20px;"></span></h2>
-						<p>Hover over each tile to see relevant courses/links to the course!</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
-					<div class="relative">
-						<div class="thumb single-service" style="background-color: #e2a599;">
-							<div class="overlay overlay-bg"></div>
-							<h4>
-								<span>University of Waterloo</span>
-							</h4>
-							<p style="font-size: 12px; color: #f0f0f0;">2018 - 2023</p>
-							<p>Bachelor of Computer Science,<br>Minor in Legal Studies</p>
-						</div>
-						<div class="middle">
-							<p style="font-size: 12px;">Designing Functional Programs</p>
-							<p style="font-size: 12px;">Elementary Algorithm Design and Data Abstraction</p>
-							<p style="font-size: 12px;">Object-Oriented Software Development</p>
-							<p style="font-size: 12px;">Logic and Computation</p>
-							<p style="font-size: 12px;">Probability</p>
-						</div>
-					</div>
-				</div>
-<!-- 				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
-					data-wow-delay="0.2s">
-					<div class="relative">
-						<div class="thumb single-service" style="background-color: #715f69;">
-							<div class="overlay overlay-bg"></div>
-							<h4>
-								<span>Princeton University</span>
-							</h4>
-							<p style="font-size: 12px; color: #f0f0f0;">2019</p>
-							<p>Algorithms Course</p>
-						</div>
-						<div class="middle">
-							<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
-						</div>
-					</div>
-					<a class="overlay" href="https://online.princeton.edu/node/201" target="_blank"></a>
-				</div> -->
-<!-- 				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
-					data-wow-delay="0.2s">
-					<div class="relative">
-						<div class="thumb single-service" style="background-color: #90acd1;">
-							<div class="overlay overlay-bg"></div>
-							<h4>
-								<span>Stanford University </span>
-							</h4>
-							<p style="font-size: 12px; color: #f0f0f0;">2019-2020</p>
-							<p>Algorithms Course</p>
-						</div>
-						<div class="middle">
-							<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
-						</div>
-						<a class="overlay" href="https://www.coursera.org/learn/machine-learning" target="_blank"></a>
-					</div>
-				</div> -->
-				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
-					data-wow-delay="0.2s">
-					<div class="relative">
-						<div class="thumb single-service" style="background-color: #90acd1;">
-							<div class="overlay overlay-bg"></div>
-							<h4>
-								<span>Udemy </span>
-							</h4>
-							<p style="font-size: 12px; color: #f0f0f0;">2019</p>
-							<p>The Complete Node.js<br>Developer Course III</p>
-						</div>
-						<div class="middle">
-							<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
-						</div>
-						<a class="overlay" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/"
-							target="_blank"></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Education Area -->
-
-	<!-- Start Work Experience Area -->
+	
+		<!-- Start Work Experience Area -->
 	<section id="experience-section" class="job-area section-gap-top section-gap-bottom-90"
 		style="background: #f9f9ff;">
 		<div class="container">
@@ -315,8 +132,8 @@
 				<div class="col-lg-12">
 					<div class="section-title">
 						<h2>Work Experience<span class="lnr lnr-briefcase" style="padding-left: 20px;"></span></h2>
-						<p>In the past, I have done a lot of full-stack work, and developing internal tools. <br>
-							I'm currently looking to improve my backend stack, and dabble in data science!</p>
+						<p>I have experience all around the stack from backend to frontend, as well as DevOps. <br>
+							I have previously interned in IBM's Extreme Blue program and am currently working as a Product Owner.</p>
 					</div>
 				</div>
 			</div>
@@ -511,6 +328,188 @@
 	</section>
 	<!-- End Job History Area -->
 
+	<!-- Start Skills Area -->
+	<section id="skills-section" class="service-area section-gap">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="section-title">
+						<h2>Skills<span class="lnr lnr-code" style="padding-left: 20px;"></span></h2>
+						<p>Hover over each tile to see my corresponding stack!</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #e2a599;">
+							<div class="overlay overlay-bg"></div>
+							<!-- <img class="image img-fluid" src="img/work/w1.jpg" alt=""> -->
+							<span class="lnr lnr-screen"></span>
+							<h4>
+								<span>Web</span> Development
+							</h4><br>
+							<p>My first internship introduced me to the possibilities of web development, which I
+								continued
+								improving on through projects and at hackathons!</p>
+						</div>
+						<div class="middle">
+							<h5>JavaScript</h5>
+							<h5>TypeScript</h5>
+							<h5>HTML</h5>
+							<h5>CSS</h5>
+							<h5>Node.js</h5>
+							<h5>Express</h5>
+							<h5>MongoDB</h5>
+							<h5>jQuery</h5>
+							<!-- <div class="cat">Client Project</div> -->
+						</div>
+						<!-- <a class="overlay" href="portfolio-details.html"></a> -->
+					</div>
+				</div>
+				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+					data-wow-delay="0.2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #715f69;">
+							<div class="overlay overlay-bg"></div>
+							<!-- <img class="image img-fluid" src="img/work/w1.jpg" alt=""> -->
+							<span class="lnr lnr-laptop-phone"></span>
+							<h4>
+								<span>Tools/Application </span>Development
+							</h4><br>
+							<p>From company-wide internal tools, to applications - I have experience in creating
+								scalable
+								tools and applications used to automate processes.</p>
+						</div>
+						<div class="middle">
+							<h5>C/C++</h5>
+							<h5>Java</h5>
+							<h5>JavaScript</h5>
+							<h5>TypeScript</h5>
+							<h5>Bash</h5>
+							<h5>Git</h5>
+							<!-- <div class="cat">Client Project</div> -->
+						</div>
+						<!-- <a class="overlay" href="portfolio-details.html"></a> -->
+					</div>
+				</div>
+				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+					data-wow-delay="0.2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #90acd1;">
+							<div class="overlay overlay-bg"></div>
+							<!-- <img class="image img-fluid" src="img/work/w1.jpg" alt=""> -->
+							<span class="lnr lnr-dice"></span>
+							<h4>
+								<span>Game </span>Development
+							</h4><br>
+							<p>My first coding project was to make Doodle Jump! Since then, I have fell
+								in love with the creativity in game development. Check out
+								the games I have made in the past here!</p>
+						</div>
+						<div class="middle">
+							<h5>Java</h5>
+							<h5>Java Swing API</h5>
+							<h5>C++</h5>
+							<h5>SQL</h5>
+							<h5>Unity [learning]</h5>
+							<!-- <div class="cat">Client Project</div> -->
+						</div>
+						<!-- <a class="overlay" href="portfolio-details.html"></a> -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Skills Area -->
+
+	<!-- Start Education Area -->
+	<section id="education-section" class="service-area section-gap" style="background: white;">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="section-title">
+						<h2>Education<span class="lnr lnr-graduation-hat" style="padding-left: 20px;"></span></h2>
+						<p>Hover over each tile to see relevant courses/links to the course!</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #e2a599;">
+							<div class="overlay overlay-bg"></div>
+							<h4>
+								<span>University of Waterloo</span>
+							</h4>
+							<p style="font-size: 12px; color: #f0f0f0;">2018 - 2023</p>
+							<p>Bachelor of Computer Science,<br>Minor in Legal Studies</p>
+						</div>
+						<div class="middle">
+							<p style="font-size: 12px;">Designing Functional Programs</p>
+							<p style="font-size: 12px;">Elementary Algorithm Design and Data Abstraction</p>
+							<p style="font-size: 12px;">Object-Oriented Software Development</p>
+							<p style="font-size: 12px;">Logic and Computation</p>
+							<p style="font-size: 12px;">Probability</p>
+						</div>
+					</div>
+				</div>
+<!-- 				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+					data-wow-delay="0.2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #715f69;">
+							<div class="overlay overlay-bg"></div>
+							<h4>
+								<span>Princeton University</span>
+							</h4>
+							<p style="font-size: 12px; color: #f0f0f0;">2019</p>
+							<p>Algorithms Course</p>
+						</div>
+						<div class="middle">
+							<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
+						</div>
+					</div>
+					<a class="overlay" href="https://online.princeton.edu/node/201" target="_blank"></a>
+				</div> -->
+<!-- 				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+					data-wow-delay="0.2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #90acd1;">
+							<div class="overlay overlay-bg"></div>
+							<h4>
+								<span>Stanford University </span>
+							</h4>
+							<p style="font-size: 12px; color: #f0f0f0;">2019-2020</p>
+							<p>Algorithms Course</p>
+						</div>
+						<div class="middle">
+							<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
+						</div>
+						<a class="overlay" href="https://www.coursera.org/learn/machine-learning" target="_blank"></a>
+					</div>
+				</div> -->
+				<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s"
+					data-wow-delay="0.2s">
+					<div class="relative">
+						<div class="thumb single-service" style="background-color: #90acd1;">
+							<div class="overlay overlay-bg"></div>
+							<h4>
+								<span>Udemy </span>
+							</h4>
+							<p style="font-size: 12px; color: #f0f0f0;">2019</p>
+							<p>The Complete Node.js<br>Developer Course III</p>
+						</div>
+						<div class="middle">
+							<p style="font-size: 14px;">Click to go to this <br>course's website!</p>
+						</div>
+						<a class="overlay" href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/"
+							target="_blank"></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Education Area -->
 
 	<!-- Start Projects Area -->
 	<section id="projects-section" class="service-area section-gap" style="background: white;">
