Added seeking sentence

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 				<div class="banner-content col-lg-6 col-md-12 justify-content-center ">
 					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">Hey! I'm</div>
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Jolene Zheng</h1>
+					<h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Currently seeking 2022 internships in software or product! :)</h4>
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
 						Software
 						<span class="designer">Developer</span>
@@ -132,8 +133,9 @@
 				<div class="col-lg-12">
 					<div class="section-title">
 						<h2>Work Experience<span class="lnr lnr-briefcase" style="padding-left: 20px;"></span></h2>
-						<p>I have experience all around the stack from backend to frontend, as well as DevOps. <br>
-							I have previously interned in IBM's Extreme Blue program and am currently working as a Product Owner.</p>
+						<p>I have experience all around the stack from backend to frontend, as well as DevOps.
+						   This summer, I interned in IBM's Extreme Blue program and am currently working as
+						   a Product Owner. I'm always looking for more ways to improve my technical and product skills! </p>
 					</div>
 				</div>
 			</div>
