--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
 				<div class="banner-content col-lg-6 col-md-12 justify-content-center ">
 					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">Hey! I'm</div>
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Jolene Zheng</h1>
-					<h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Currently seeking 2022 internships in software or product! :)</h4>
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
 						Software
 						<span class="designer">Developer</span>
 						and<br>
 						<span class="developer bio-typed"></span>
 					</div>
+					<h5 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Currently seeking 2022 internships in software or product!</h5>
+
 <!-- 					<a href="/img/Jolene_Zheng_Resume_2020.pdf" class="primary-btn" target="_blank" data-text="Resume">
 						<span>R</span>
 						<span>e</span>
