--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 				<div class="banner-content col-lg-6 col-md-12 justify-content-center ">
 					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">Hey! I'm</div>
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Jolene Zheng</h1>
+					<h5 class="wow fadeInUp" style="color:#B2B2B2;" data-wow-duration="1s" data-wow-delay="1.7s">Currently seeking 2022 internships in software or product!</h5>
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
 						Software
-						<span class="designer">Developer</span>
+						<span class="designer">Engineer</span>
 						and<br>
 						<span class="developer bio-typed"></span>
 					</div>
-					<h5 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Currently seeking 2022 internships in software or product!</h5>
 
 <!-- 					<a href="/img/Jolene_Zheng_Resume_2020.pdf" class="primary-btn" target="_blank" data-text="Resume">
 						<span>R</span>
@@ -833,7 +833,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
 	<script>
 		var options = {
-			strings: ["Idea Materializer", "Software Engineer", "Raptors Fan", "Astronomy Geek", "Athlete", "Music Enthusiast", "Traveller"],
+			strings: ["Product Owner", "Astronomy Geek", "Athlete", "Music Enthusiast", "Idea Materializer", "Raptors Fan", "Traveller"],
 			typeSpeed: 60,
             backSpeed: 60,
             loop: true,
