--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 			<div class="row fullscreen d-flex align-items-center">
 				<div class="banner-content col-lg-6 col-md-12 justify-content-center ">
 					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">Hey! I'm</div>
+					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">Currently seeking 2022 internships in software or product!</div>
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Jolene Zheng</h1>
 					<h5 class="wow fadeInLeft" style="color:#B2B2B2;" data-wow-duration="1s" data-wow-delay="3s">Currently seeking 2022 internships in software or product!</h5>
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
@@ -117,6 +118,8 @@
 						<span>i</span>
 						<span>l</span>
 					</a>
+					<h6 class="wow fadeInLeft" style="color:#B2B2B2;" data-wow-duration="1s" data-wow-delay="3s">Currently seeking 2022 internships in software or product!</h5>
+
 				</div>
 				<div class="banner-img col-lg-6 col-md-6">
 					<img class="img-fluid" src="img/portrain.png" alt="">
